# u2u-keyboard

./: Cargo.toml  README.md  esc-sequence_map.txt  latin-9_map.txt  upload.sh
doc/: basic_ai.avif  usage_ai.avif
release/: u2u-keyboard_qwerty.uf2  u2u-keyboard_qwertz.uf2
src/: layout.rs  layout_qwerty.rs  layout_qwertz.rs  led.rs  main.rs  usb.rs
