[package]
name = "u2u-keyboard"
version = "0.1.0"
edition = "2021"

[features]
# Select the keyboard layout that matches the host OS setting.
# Exactly one layout feature must be active at a time.
default = ["layout-qwertz"]
layout-qwerty = []   # US/UK QWERTY
layout-qwertz = []   # German/Austrian QWERTZ

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section", "inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-rp = { version = "0.9.0", features = [
    "rp2040",
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.5", features = ["defmt", "max-interface-count-2", "max-handler-count-1"] }
embedded-io-async = "0.6"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.13.1", features = ["critical-section"] }
static_cell = "2.1.1"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
